--- a/src/static/doctor.html
+++ b/src/static/doctor.html
@@ -17,17 +17,11 @@
             <h1 class="text-center">{{ title }}</h1>
             <br>
             <div id="status"></div>
-            <div id="vitals">
+            <div id="chat">
                 <label for="patient">Select Patient:</label>
-                <select class="form-control" id="patient" v-model="activePatient" @change="onChange($event)">
+                <select class="form-control" id="patient" v-model="selectedPatient" @change="onChange($event)">
                     <option  v-for="patient of listPatients" :value="patient">{{ patient }}</option>
                 </select>
-                <br>
-                <label for="hr">Heart Rate:</label>
-                <input type="checkbox" v-model="hr" id="hr" class="form-control">
-                <br>
-                <label for="temp">Temperature:</label>
-                <input type="checkbox" v-model="temp" id="temp" class="form-control">
                 <br>
                 <label for="messages">Vitals:</label>
                 <div class="card">
@@ -38,13 +32,13 @@
                     </div>
                 </div>
                 <br>
-                <button v-if="!sendingStarted" id="send" class="btn btn-success" @click.prevent="sendVitals">Send</button>
-                <button v-if="sendingStarted" id="stop" class="btn btn-danger" @click.prevent="stopSendingVitals">Stop</button>
+                <button v-if="!showingStarted" id="show" class="btn btn-success" @click.prevent="showVitals">Show</button>
+                <button v-if="showingStarted" id="stop" class="btn btn-danger" @click.prevent="stopShowingVitals">Stop</button>
             </div>
         </div>
     </div>
 </div>
 
-<script src="patient.js"></script>
+<script src="doctor.js"></script>
 </body>
 </html>
