--- a/src/static/patient.html
+++ b/src/static/patient.html
@@ -17,28 +17,29 @@
             <h1 class="text-center">{{ title }}</h1>
             <br>
             <div id="status"></div>
-            <div id="chat">
-                <label for="room">Select room:</label>
-                <select class="form-control"  id="room" v-model="selected" @change="onChange($event)">
-                    <option  v-for="room of listRooms" :value="room">{{ room }}</option>
+            <div id="vitals">
+                <label for="patient">Select Patient:</label>
+                <select class="form-control" id="patient" v-model="selectedPatient" @change="onChange($event)">
+                    <option  v-for="patient of listPatients" :value="patient">{{ patient }}</option>
                 </select>
                 <br>
-                <label for="username">Your Name:</label>
-                <input type="text" v-model="name" id="username" class="form-control" placeholder="Enter name...">
+                <label for="hr">Heart Rate:</label>
+                <input type="checkbox" v-model="hr" id="hr" class="form-control">
                 <br>
-                <label for="messages">Chat:</label>
+                <label for="temp">Temperature:</label>
+                <input type="checkbox" v-model="temp" id="temp" class="form-control">
+                <br>
+                <label for="messages">Vitals:</label>
                 <div class="card">
                     <div id="messages" class="card-block">
                         <ul>
-                            <li v-for="message of messages">{{ message.name }}: {{ message.text }}</li>
+                            <li v-for="vital of vitals">{{ vital.name }}: {{ vital.value }}</li>
                         </ul>
                     </div>
                 </div>
                 <br>
-                <label for="textarea">Message:</label>
-                <textarea id="textarea" class="form-control" v-model="text" placeholder="Enter message..."></textarea>
-                <br>
-                <button id="send" class="btn" @click.prevent="sendMessage">Send</button>
+                <button v-if="!sendingStarted" id="send" class="btn btn-success" @click.prevent="sendVitals">Send</button>
+                <button v-if="sendingStarted" id="stop" class="btn btn-danger" @click.prevent="stopSendingVitals">Stop</button>
             </div>
         </div>
     </div>
