--- a/src/static/doctor.html
+++ b/src/static/doctor.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <title>Nestjs SocketIO</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
+    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"
+            integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="app" class="container">
@@ -16,29 +19,35 @@
         <div class="col-md-6 offset-md-3 col-sm-12">
             <h1 class="text-center">{{ title }}</h1>
             <br>
-            <div id="status"></div>
-            <div id="chat">
-                <label for="patient">Select Patient:</label>
-                <select class="form-control" id="patient" v-model="selectedPatient" @change="onChange($event)">
-                    <option  v-for="patient of listPatients" :value="patient">{{ patient }}</option>
-                </select>
+            <div id="vitals">
+                <label for="patient">Patient ID:</label>
+                <input type="text" v-model="selectedPatient" id="patient" class="form-control"
+                       v-on:blur="onChangePatient()"
+                       placeholder="Enter patient Id...">
                 <br>
-                <label for="messages">Vitals:</label>
+                <label for="messages">Messages:</label>
                 <div class="card">
                     <div id="messages" class="card-block">
-                        <ul>
-                            <li v-for="vital of vitals">{{ vital.name }}: {{ vital.value }}</li>
-                        </ul>
+                        <ol>
+                            <li v-for="message of messages">{{ message }}</li>
+                        </ol>
                     </div>
                 </div>
                 <br>
-                <button v-if="!showingStarted" id="show" class="btn btn-success" @click.prevent="showVitals">Show</button>
-                <button v-if="showingStarted" id="stop" class="btn btn-danger" @click.prevent="stopShowingVitals">Stop</button>
+                <label for="patient">Reading status: {{ readingStarted ? 'Started' : 'Stopped' }}</label>
+                <br>
+                <button v-if="!readingStarted" id="read" class="btn btn-success" @click.prevent="startReadingMessages">
+                    Read
+                </button>
+                <button v-if="readingStarted" id="stop" class="btn btn-danger" @click.prevent="stopReadingMessages">
+                    Stop
+                </button>
             </div>
         </div>
     </div>
 </div>
 
+<script src="main.js"></script>
 <script src="doctor.js"></script>
 </body>
 </html>
