--- a/src/static/patient.html
+++ b/src/static/patient.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <title>Nestjs SocketIO</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs" crossorigin="anonymous"></script>
+    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"
+            integrity="sha384-KAZ4DtjNhLChOB/hxXuKqhMLYvx3b5MlT55xPEiNmREKRzeEm+RVPlTnAn0ajQNs"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="app" class="container">
@@ -16,35 +19,51 @@
         <div class="col-md-6 offset-md-3 col-sm-12">
             <h1 class="text-center">{{ title }}</h1>
             <br>
-            <div id="status"></div>
             <div id="vitals">
-                <label for="patient">Select Patient:</label>
-                <select class="form-control" id="patient" v-model="selectedPatient" @change="onChange($event)">
-                    <option  v-for="patient of listPatients" :value="patient">{{ patient }}</option>
-                </select>
+                <label for="patient">Patient ID:</label>
+                <input type="text" v-model="selectedPatient" id="patient" class="form-control"
+                       v-on:blur="onChangePatient()"
+                       placeholder="Enter patient Id...">
                 <br>
-                <label for="hr">Heart Rate:</label>
-                <input type="checkbox" v-model="hr" id="hr" class="form-control">
+                <div class="checkbox">
+                    <label for="hr">
+                        <input type="checkbox" v-model="vitals.hr.isActive" id="hr">
+                        Heart Rate
+                    </label>
+                </div>
                 <br>
-                <label for="temp">Temperature:</label>
-                <input type="checkbox" v-model="temp" id="temp" class="form-control">
+                <div class="checkbox">
+                    <label for="temp">
+                        <input type="checkbox" v-model="vitals.temp.isActive" id="temp">
+                        Temperature
+                    </label>
+                </div>
                 <br>
-                <label for="messages">Vitals:</label>
+                <label>Message structure: {"room": string, "data": any}</label>
+                <br>
+                <label for="messages">Messages:</label>
                 <div class="card">
                     <div id="messages" class="card-block">
-                        <ul>
-                            <li v-for="vital of vitals">{{ vital.name }}: {{ vital.value }}</li>
-                        </ul>
+                        <ol>
+                            <li v-for="message of messages">{{ message }}</li>
+                        </ol>
                     </div>
                 </div>
                 <br>
-                <button v-if="!sendingStarted" id="send" class="btn btn-success" @click.prevent="sendVitals">Send</button>
-                <button v-if="sendingStarted" id="stop" class="btn btn-danger" @click.prevent="stopSendingVitals">Stop</button>
+                <label for="patient">Sending status: {{ sendingStarted ? 'Started' : 'Stopped' }}</label>
+                <br>
+                <button v-if="!sendingStarted" id="send" class="btn btn-success" @click.prevent="startSendingMessages">
+                    Send
+                </button>
+                <button v-if="sendingStarted" id="stop" class="btn btn-danger" @click.prevent="stopSendingMessages">
+                    Stop
+                </button>
             </div>
         </div>
     </div>
 </div>
 
+<script src="main.js"></script>
 <script src="patient.js"></script>
 </body>
 </html>
