feat: create ws patien data access
ZZMED-124

--- a/src/static/patient.html
+++ b/src/static/patient.html
@@ -49,7 +49,7 @@
                     </label>
                 </div>
                 <br>
-                <label>Message structure: {"room": string, "data": any}</label>
+                <label>Message structure: {"patientUserId": string, "data": any}</label>
                 <br>
                 <label for="messages">Messages:</label>
                 <div class="card">
